# AAF_Reaper

./: Fix-CMake-302.ps1
.github/workflows/: build.yml
AAF_SDK_devel/include/: AAF.h  AAFAudioLabels.h  AAFCOMPlatform.h  AAFCOMPlatformTypes.h  AAFClassDefUIDs.h  AAFCodecDefs.h  AAFCompressionDefs.h  AAFContainerDefs.h  AAFDataDefs.h  AAFEssenceFormats.h  AAFExtEnum.h  AAFInterpolatorDefs.h  AAFMetaDictionary.h  AAFOPDefs.h  AAFOperationCategories.h  AAFOperationDefs.h  AAFParameterDefs.h  AAFPlatform.h  AAFPlugin.h  AAFPluginDefs.h  AAFPlugin_i.c  AAFPropertyDefs.h  AAFPropertyIDs.h  AAFStoredObjectIDs.h  AAFTypeDefUIDs.h  AAFTypes.h  AAF_i.c
AAF_SDK_devel/x64/Debug/RefImpl/: AAFD.lib  AAFIIDD.lib
AAF_SDK_devel/x64/Release/RefImpl/: AAF.lib  AAFIID.lib
aaf_reader/: AGENTS.md  CMakeLists.txt  ExportedClips.edl  PROJECT_STATUS.md  README.md  aaf_audio_properties.cpp  aaf_audio_properties.h  aaf_clip_processor.cpp  aaf_clip_processor.h  aaf_essence_extractor.cpp  aaf_essence_extractor.h  aaf_essence_parser.cpp.backup  aaf_essence_parser.h.backup  aaf_fade_detector.cpp  aaf_fade_detector.h  aaf_import_csv.lua  aaf_parser.cpp  aaf_parser.cpp.backup  aaf_parser.h  aaf_parser.h.backup  aaf_proper_parser.cpp  aaf_proper_parser.cpp.broken  aaf_proper_parser.h  aaf_proper_parser_new.cpp  aaf_utils.cpp  aaf_utils.h  csv_export.cpp  csv_export.h  data_structures.h  debug_logger.cpp  debug_logger.h  main.cpp  main_new.cpp  media_utils.cpp  media_utils.h  right_list_right_files.txt  test_essence.cpp
docs/: 1.txt  2.txt  3.txt  4.txt
